--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -3,141 +3,149 @@
   background-color: white;
   display: flex;
   /* flex-direction: column; */
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 .leftside {
   width: 30%;
   height: 714px;
   display: inline-block;
-  background-color: #FDE4E4;
+  background-color: #fde4e4;
+  font-style: lora;
   text-align: center;
 }
-.leftside img{
-    height: 90px;
+.leftside img {
+  height: 90px;
 }
 
-.logos{
-    margin-top: 41px;
+.logos {
+  margin-top: 41px;
 }
 
 .leftside span {
-    color: #4387CA;
+  color: #4387ca;
 }
 
 .rightside {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.top{
-    margin-top: 30px;
-    width: 100%;
-    display: flex;
-    margin-left: 100px;
-    justify-content: space-between;
+.top {
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  margin-left: 100px;
+  justify-content: space-between;
 }
 
 .back {
-    margin-top: 16px;
- /* margin-left: 70px; */
+  margin-top: 16px;
+  /* margin-left: 70px; */
 }
 
-.back img{
-    width: 80px;
-    background-color: transparent;
+.back img {
+  width: 80px;
+  background-color: transparent;
 }
 .forget {
-    margin-left: 500px;
-    width: 200px;
+  margin-left: 500px;
+  width: 200px;
   color: #6b6565;
 }
-.forget span{
-    color: #4387CA;
+.forget span {
+  color: #4387ca;
 }
 .form {
-    font-weight: bold;
-    margin-top: 80px;
-    margin-left: 50px;
-
+  font-weight: bold;
+  margin-top: 80px;
+  margin-left: 50px;
 }
-.form span{
-    color: #4387CA;
-}
-
-.input{
-    /* position: absolute; */
-    /* width: 40%; */
-    padding: 5px 5px;
+.form span {
+  color: #4387ca;
 }
 
-#eyeTwo, #eyeOne {
-    color: #373737;
-   top: 35px;
-    left: 280px;
-    position: relative;
-  }
-  .name{
-      display: flex;
-      flex-direction: column;
-      width: 50%;
-      align-items: center;
-      position: relative;
-      padding: 15px ;
-  }
-  .name h4{
-      /* justify-content: flex-start; */
-      /* margin-bottom: 500px; */
-      bottom: 44%;
-      left: 42%;
-      text-align: left;
-      position: absolute;
+.input {
+  /* position: absolute; */
+  /* width: 40%; */
+  padding: 5px 5px;
+}
 
-  }
-  .name h5{
-    bottom: 50%;
-    left: 42%;
-    text-align: left;
-    position: absolute;
+#eyeTwo,
+#eyeOne {
+  color: #373737;
+  top: 35px;
+  left: 280px;
+  position: relative;
+}
+.name {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
+  position: relative;
+  padding: 15px;
+}
+.name h4 {
+  bottom: 44%;
+  left: 42%;
+  text-align: left;
+  position: absolute;
+  font-style: lora;
+}
+.name h5 {
+  bottom: 50%;
+  left: 42%;
+  text-align: left;
+  position: absolute;
+  font-style: lora;
+}
+input {
+  border-radius: 10px;
+  border-color: transparent;
+  margin-left: 80%;
+  background-color: #d9d9d9;
+  width: 95%;
+  height: 30px;
+}
 
+.log {
+  margin-top: 50px;
+  align-items: center;
+  margin-left: 80px;
 }
-  input{
-      border-radius: 10px;
-      border-color: transparent;
-      margin-left: 80%;
-      background-color: #D9D9D9;
-      width: 95%;
-      height: 30px;
-  }
+.done {
+  font-size: 10px;
+  color: #0a66c2;
+  margin-left: 25%;
+  margin-top: -10px;
+}
+.link {
+  text-decoration: none;
+  font-style: lora;
+}
+.bck {
+  text-decoration: none;
+  color: black;
+}
+.sign {
+  margin-top: 60px;
+  font-style: lora;
+  margin-left: 70px;
+}
+.sign button {
+  font-style: lora;
+  height: 40px;
+  width: 25%;
+  border-radius: 15px;
+  background-color: #0a66c2;
+  color: white;
+  border-color: transparent;
+}
 
-
-.log{
-    margin-top: 50px;
-    align-items: center;
-    margin-left: 80px;
-}
-.done{
-    font-size: 10px;
-    color: #0A66C2;
-    margin-left: 25%;
-    margin-top: -10px;
-}
-.link{
-    text-decoration: none;
-}
-.bck{
-    text-decoration: none;
-    color: black;
-}
-.sign{
-    margin-top: 60px;
-    margin-left: 70px;
-}
-.sign button{
-    height: 40px;
-    width: 25%;
-    border-radius: 15px;
-    background-color: #0A66C2;
-    color: white;
-    border-color: transparent;
+.intro{
+ font-weight: bold;   
+ font-size: 25px;
+ margin-left: 40px;
 }
