--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -329,8 +329,10 @@
 
 .top-title{
     height: 40px;
+    width: 250px;
+    margin-left: 8px;
     display: flex;
-    align-items:center ; 
+    align-items:center;
 }
 
 .top-title p{
@@ -343,6 +345,8 @@
 
 .top-body{
     height: 90px;
+    width: 250px;
+    margin-left: 8px;
     display: flex;
     align-items: center;
 }
@@ -356,7 +360,7 @@
 }
 
 .box-bottom-person{
-    width: 270px;
+    width: 250px;
     height: 60px;
     display: flex;
     padding: 0px;
