--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -18,8 +18,6 @@
     align-items: center;
     background-color: #FDE4E4;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    /* display: flex;
-    flex-wrap: wrap; */
 }
 
 .profile-logo img{
@@ -32,6 +30,7 @@
 .profile-logo{
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
 
 .profile-right{
@@ -104,6 +103,7 @@
 .right-img-avatar{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
     width: 450px;
     height: 205px;
@@ -187,8 +187,6 @@
     background: transparent;
     border-bottom: 1px solid;
 }
-
- 
 
 ::placeholder{
     font-family: 'Ubuntu';
