--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,13 +6,18 @@
 .navbar{
     height: 60px;
     width: 100%;
+    gap: 30px;
     position: fixed;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: #FDE4E4;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.Menu {
+    display: none;
 }
 /* LOGO  CHILD*/
 .logo{
@@ -21,6 +26,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid;
 }
 
 .logo img{
@@ -31,7 +37,11 @@
 
 .navigations{
     width: 70%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
     float: left;
+    border: 1px solid;
 }
 
 .menu{
@@ -55,24 +65,28 @@
 
 .navigation{
     width: 40%;
+    height: 100%;
     float: right;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 35px;
+    border: 1px solid;
 }
 
 .list select{
     background-color: transparent;
+    font-family: 'Ubuntu';
     outline: none;
-    font-family: 'Lora';
     font-size: 0.9rem;
+}
+
+.list select option{
+    font-family: 'Ubuntu';
 }
 
 .rout{
     color: black;
-    font-family: 'Lora';
     font-style: normal;
     font-weight: 400;
     font-size: 0.9rem;
@@ -83,101 +97,48 @@
     align-items: center;
 }
 
+.route{
+    font-family: 'Ubuntu';
+}
+
 .route1{
+    height: 30px;
+    width: 100px;
+    border-radius: 6px;
     color: #FFFFFF;
-    font-family: 'Lora';
     font-style: normal;
     font-weight: 700;
     font-size: 0.8rem;
     line-height: 15px;
     text-decoration: none;
-}
-
-.sign{
-    height: 30px;
-    width: 100px;
-    border-radius: 6px;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #0A66C2;
+
 }
 
 @media (max-width: 900px) {
+    .navbar{width: 70%;}
     .navigation{
         width: 30%;
         margin-right: 25px;
     }
 }
 
-/* .navbar{
-    position: fixed;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    height: Hug (72.5%);
-    width: 100%;
-    gap: 250px;
-   
-}
+@media (max-width: 1000px) {
+    .navbar {width: 80%;}
+    .menu{width: 30%;}
+    .navigation{width: 30%;}
+    .logo{width: 20%;}
+  }
 
-.navbar img {
-    
-}
-.menu {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    height: 45px;
-
-    
-}
-.menu li{
-    position: relative;
-    list-style: none;
-    justify-content: space-between;
-    padding: 10px;
-}
-
-
-
-.route:hover{
-    color: #0A66C2;
-    border-bottom: 2px solid #0A66C2;
-}
-
-
-
-.navigation{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: relative;
-    margin-right: 50px;
-    gap: 30px;
-    
-}
-
-
-
-
-
-@media (max-width: 900px) {
-    .navbar {
-      width: 100%;
-      
-    }
-    .menu{
-        width: 30%;
-        
-    }
-
-    .navigation{
-        width: 30%;
-    }
-
-    .logo{
-        width: 20%;
-    }
-  } */
+  @media (max-width: 375px) {
+    .navigations{display: none;}
+    .Menu{display: block;
+        margin-left: 30px;}
+    .logo{width: 15%;}
+    .navbar{display: flex;
+        justify-content: space-between; width: 375px;}
+    .navigation{ width: 30%;}
+  }
