--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,8 +12,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #FDE4E4;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    background-color: #C8A2C8;
 }
 
 .Menu {
@@ -26,7 +25,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid;
 }
 
 .logo img{
@@ -41,7 +39,6 @@
     display: flex;
     justify-content: center;
     float: left;
-    border: 1px solid;
 }
 
 .menu{
@@ -71,7 +68,6 @@
     justify-content: center;
     align-items: center;
     gap: 35px;
-    border: 1px solid;
 }
 
 .list select{
@@ -114,7 +110,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0A66C2;
+    background-color: rgba(10, 102, 194, 0.8);
 
 }
 
