--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -169,7 +169,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    background-color: #FCF2FC;
+    background-color: #EEDCEE;
     backdrop-filter: blur(12px);
     position: relative;
     z-index: -1;
