--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -239,6 +239,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* There nothing to changes */
 }
 
 .box-right{
